--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "ra-data-local-storage": "^4.2.6"
   }
 }
