--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.2.6",
+    "ra-language-pt-br": "^1.3.6",
     "react": "^18.2.0",
     "react-admin": "^4.2.6",
     "react-dom": "^18.2.0",
